    
    S2GRAPH-93: Remove MySQL JDBC driver (Committed by DOYUNG YOON).
    
    S2GRAPH-98: Make test cases on multiple projects run sequentially (Committed by DOYUNG YOON).
    
    S2GRAPH-99: Reduce number of test run on test cases on org.apache.s2graph.rest.play.benchmark (Committed by DOYUNG YOON).

    S2GRAPH-96: Remove unmanaged dependencies(asynchbase) and speficy it on build.sbt. (Committed by DOYUNG YOON).
    
    S2GRAPH-97: Add KEYS file (Committed by DOYUNG YOON).

    S2GRAPH-95: Add sbt-pgp plugin on plugins.sbt (Committed by DOYUNG YOON).

    S2GRAPH-92: Add proper license headers on files with unknown licenses (Committed by DOYUNG YOON).

    S2GRAPH-100: Add BUILD.md to explain how to package from source, then add it into REAME.md (Committed by DOYUNG YOON).
    
    S2GRAPH-94: Add description for project layout on REAME.
		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON).

    S2GRAPH-103: Remove dependencies on custom fork of asynchbase (Committed by DOYUNG YOON).

    S2GRAPH-102: Add more configuration optoins in application.conf (Committed by DOYUNG YOON).
    
    S2GRAPH-84: Test-case compilation error on `s2counter_loader` project (Committed by Jaesang Kim).

    S2GRAPH-104: force scalaz-stream, netty-http-pipelining dependencies version which is available on maven central (Committed by DOYUNG YOON).
    
    S2GRAPH-109: Merge duplicate test.sh into one same as `Your First Graph` on README.md (Committed by DOYUNG YOON).

    S2GRAPH-106: Remove warnings while package (Committed by DOYUNG YOON).

    S2GRAPH-112: Additional refinements in README.md
		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON).

    S2GRAPH-111: typo fix: getServiceLable -> getServiceLabel
		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON).

  TEST
    
    S2GRAPH-21: Change PostProcessBenchmarkSpec not to store and fetch test data from storage. (Committed by DOYUNG YOON).
